--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -25,12 +25,23 @@ html {
 }
 
 body {
+  position: relative;
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
   background-color: $color-default-white;
+  min-height: 100vh;
+  /* stylelint-disable-next-line */
+  min-height: calc(100 * var(--vh, 1vh));
+
+  .header,
+  .footer {
+    flex-shrink: 0;
+  }
+
+  main {
+    flex-grow: 1;
+  }
 }
 
 main {
@@ -128,8 +139,4 @@ button,
 [type="reset"],
 [type="submit"] {
   appearance: none;
-}
-
-footer {
-  flex-shrink: 0;
 }
