--- a/css/style.css
+++ b/css/style.css
@@ -2956,6 +2956,8 @@ button,
 
 .main-header__logo-container {
   margin-right: auto;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
 }
 
 .main-header__nav-list {
@@ -3045,6 +3047,11 @@ button,
   padding: 182px 120px 78px 120px;
   max-width: 1440px;
   margin: 0 auto;
+  display: none;
+}
+
+.swiper-slide-active .hero__content-container {
+  display: block;
 }
 
 .hero__content-container p {
@@ -4397,9 +4404,9 @@ button,
   padding: 31px 120px 30px 120px;
   max-width: 1440px;
   margin: 0 auto;
-  -webkit-column-gap: 20px;
-  -moz-column-gap: 20px;
-  column-gap: 20px;
+  -webkit-column-gap: 10px;
+  -moz-column-gap: 10px;
+  column-gap: 10px;
 }
 
 .main-footer__logo {
@@ -4458,6 +4465,14 @@ button,
   grid-row: 1;
   -ms-grid-column-align: end;
   justify-self: end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  row-gap: 10px;
 }
 
 .main-footer__contacts-container a {
@@ -4994,7 +5009,7 @@ button,
   }
 
   .training p {
-    margin: 0 45px 67px 45px;
+    margin: 0 138px 67px 45px;
     max-width: 820px;
   }
 
@@ -5428,6 +5443,7 @@ button,
     -ms-grid-column: 2;
     -ms-grid-column-span: 2;
     grid-column: 2/4;
+    margin-left: 68px;
     margin-top: 5px;
     gap: 10px 11px;
     -ms-grid-row-align: normal;
