--- a/css/style.css
+++ b/css/style.css
@@ -3257,6 +3257,7 @@ button,
   width: 100%;
   max-height: 100vh;
   overflow-y: auto;
+  padding-bottom: 70px;
 }
 
 .main-container__image-wrapper {
@@ -3725,6 +3726,8 @@ button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
   gap: 15px;
   position: relative;
   padding-bottom: 36px;
@@ -4429,7 +4432,7 @@ button,
   -ms-flex-pack: start;
   justify-content: flex-start;
   gap: 10px 23px;
-  margin-left: 7px;
+  margin-left: 13px;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
@@ -4775,7 +4778,6 @@ button,
   }
 
   .main-header__contacts-container {
-    display: block;
     -webkit-box-ordinal-group: 3;
     -ms-flex-order: 2;
     order: 2;
@@ -5596,6 +5598,11 @@ button,
     background-image: linear-gradient(143deg, rgba(15, 20, 41, 0.33) 0%, rgba(15, 20, 41, 0) 100%), image-set(url("../img/hero/hero-third/hero-third-mobile.webp") 1dppx, url("../img/hero/hero-third/hero-third-mobile@2x.webp") 2dppx, url("../img/hero/hero-third/hero-third-mobile.png") 1dppx, url("../img/hero/hero-third/hero-third-mobile@2x.png") 2dppx);
   }
 
+  .burger-menu {
+    row-gap: 22px;
+    padding-bottom: 50px;
+  }
+
   .burger-menu__content {
     row-gap: 22px;
     padding: 26px 0 50px 15px;
@@ -6154,7 +6161,7 @@ button,
   }
 
   .main-footer__logo {
-    margin-bottom: 17px;
+    margin-bottom: 20px;
   }
 
   .main-footer__navigation-list {
